# MAIBOT

./: .env.example  .gitignore  .module-boundary-baseline.json  .module-boundary.json  ARCHIVE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_ARCHIVE.md  SECURITY.md  langgraph.json  package-lock.json  package.json  pnpm-lock.yaml  project_basic_info.json  project_info.json  start
backend/: .env.example  __init__.py  langgraph_config.py  pyproject.toml  requirements.txt  run_langserve.py  start_vllm_final.sh  test_streaming.py  test_streaming_debug.py
backend/api/: __init__.py  app.py  common.py  deps.py  knowledge_api.py  knowledge_ops_api.py  workspace_auto_index_api.py
backend/ccb_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/config/: agent_profile.json  autonomous_tasks.json  core_tools.json  governance_thresholds.json  license_tiers.json  mcp_servers.json  memory_scope.py  middleware_chain.json  models.json  parallel_policy.json  plugin_sources.json  reliability_slo_thresholds.json  roles.json  skill_profiles.json  skills_market.json  store_namespaces.py
backend/docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CLAUDE_ALIGNMENT.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_ARCHITECTURE_REVIEW.md  COMPREHENSIVE_OPTIMIZATION_PLAN.md  CONFIG_USAGE_EXAMPLES.md  CONTEXT_MANAGEMENT.md  CONTEXT_WINDOW_MANAGEMENT.md  DEPENDENCIES.md  DISTILLATION_MANUAL_WORKFLOW.md  FILE_ARCHITECTURE_CLARIFICATION.md  FOUR_MODES_DESIGN.md  GENERAL_AGENT_DESIGN.md  KNOWLEDGE_ARCHITECTURE.md  KNOWLEDGE_FRONTEND_LINKAGE.md  LANGCHAIN_TOOL_COMPOSITION.md  LANGGRAPH_CONFIG_IMPLEMENTATION.md  LANGGRAPH_SDK_DEEP_ANALYSIS.md  LANGGRAPH_SDK_DEEP_DIVE.md  MEMORY_ARCHITECTURE.md  MIDDLEWARE_DEEP_ANALYSIS.md  MODEL_SELECTION_IMPLEMENTATION.md  ORCHESTRATOR_3_SUBAGENTS_ARCHITECTURE.md  PATH_ARCHITECTURE.md  REASONING_KNOWLEDGE_BASE.md  ROUTER_AND_MCP_ENHANCEMENT.md  SKILL_DESIGN.md  SUBAGENT_OUTPUT_SPEC.md  SYSTEM_STATUS.md  TOOLS_COMPARISON.md  TOOL_ARCHITECTURE_CURSOR_STYLE.md  UNIFIED_MEMORY_ARCHITECTURE.md
backend/engine/: file_version_store.py
backend/knowledge_base/: __init__.py  manager.py
backend/maibot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/memory/: README.md  __init__.py  jit_verifier.py  memory_manager.py  rules_extractor.py  user_leverage.py  user_model.py
backend/scripts/: analyze_mistakes.py  build_ci_job_summary.py  build_knowledge_pipeline_snapshot.py  build_memory_quality_report.py  build_memory_quality_trend_report.py  build_memory_scope_contract_report.py  build_parity_scorecard.py  build_parity_trend_report.py  build_policy_decision_report.py  build_release_drill_report.py  build_release_gate_summary.py  build_ui_stream_metrics_snapshot.py  build_unified_observability_snapshot.py  check_board_contracts.py  check_ci_release_gates.py  check_knowledge_source_compliance.py  check_module_boundary.py  check_ontology_capability.py  check_plugin_command_conflicts.py  check_plugin_manifest_compat.py  check_release_signoff.py  check_reliability_slo.py  check_slo_tightening_guard.py  check_task_status_wiring.py  collect_task_status_projection_evidence.py  e2e_chat_35b.py  e2e_smoke.py  evaluate_distillation_loop.py  export_distillation_samples.py  init_knowledge_base.py  init_workspaces.py  migrate_context_to_maibot.py  plugin_runtime_compat_smoke.py  plugins_compat_smoke.py  rag_retrieval_benchmark.py  release_drill.py  release_drill_steps_utils.py  release_gate.py  release_postcheck.py  run_regression.sh  (+19 more)
backend/systems/: __init__.py  file_manager.py
backend/tests/: test_accept_bid_concurrency.py  test_agent_cache_key_completeness.py  test_api_board_tasks.py  test_api_common_resolve_read_path.py  test_autonomy_levels_contract.py  test_cloud_call_gate_middleware.py  test_deep_agent_middleware_utils.py  test_editor_tool_path.py  test_learning_loop_regressions.py  (+24 more)
(+3664 files in other folders)
